--- a/default.css
+++ b/default.css
@@ -3,6 +3,10 @@
     font-family: UbuntuR;
 }
 
+body {
+    user-select: none;
+}
+
 .center {
     left: 50%;
     top: 50%;
@@ -10,6 +14,7 @@
     position: fixed;
     text-align: center;
     font-size: 20vmin;
+    font-family: UbuntuR;
 }
 
 .bottom {
@@ -17,4 +22,5 @@
     right: 5mm;
     position: fixed;
     font-size: 1vmax;
+    font-family: UbuntuR;
 }
